--- a/languages/assets_zh-cn.json
+++ b/languages/assets_zh-cn.json
@@ -470,7 +470,7 @@
     "objects": {
         "wordFails": "失败次数",
         "wordStarAccusativeDualOrCounter": "颗",
-        "wordStarAccusativePlural": "星星",
-        "wordStarAccusativeSingular": "星星"
+        "wordStarAccusativePlural": "力量之星",
+        "wordStarAccusativeSingular": "力量之星"
     }
 }
