--- a/languages/thextech_zh-cn.json
+++ b/languages/thextech_zh-cn.json
@@ -378,7 +378,7 @@
     "menu": {
         "abbrevMilliseconds": "毫秒",
         "battle": {
-            "errorNoLevels": "对战关卡列表为空，无法进入对战。"
+            "errorNoLevels": "对战关卡列表为空，无法进入对战模式。"
         },
         "caseNone": "<无>",
         "character": {
@@ -403,7 +403,7 @@
             "caseMouse": "（鼠标）",
             "caseTouch": "（触屏）",
             "controlsConnected": "已连接：",
-            "controlsDeleteKey": "（按第二奔跑键清除）",
+            "controlsDeleteKey": "（按第二跳跃键清除）",
             "controlsDeviceTypes": "设备类型",
             "controlsInUse": "（已使用）",
             "controlsNewProfile": "<新建配置>",
