--- a/languages/thextech_zh-tw.json
+++ b/languages/thextech_zh-tw.json
@@ -7,8 +7,7 @@
             "invis": "隱形",
             "letterHeight": "高 ",
             "letterWidth": "寬 ",
-            "pickContents1": "選擇磚塊",
-            "pickContents2": "包含道具",
+            "pickContents": "選擇磚塊包含道具",
             "slick": "打滑"
         },
         "browser": {
@@ -32,20 +31,15 @@
                 "deletingEvent": "刪除事件{0}"
             },
             "desc": {
-                "activate1": "NPC在當前畫面出現時",
-                "activate2": " ",
-                "death1": "NPC死亡時",
-                "destroy1": "磚塊破碎時",
-                "destroy2": " ",
-                "enter1": "進入傳送點時",
-                "enter2": " ",
-                "hit1": "磚塊被撞擊時",
-                "layerClear1": "當前圖層中的對象爲空時",
-                "layerClear2": " ",
-                "layerClear3": " ",
-                "phraseTriggersWhen": "觸發事件於",
-                "talk1": "和NPC對話後",
-                "talk2": " "
+                "activate": "NPC在當前畫面出現時",
+                "death": "NPC死亡時",
+                "destroy": "磚塊破碎時",
+                "enter": "進入傳送點時",
+                "hit": "磚塊被撞擊時",
+                "layerClear": "當前圖層中的對象爲空時",
+		"phraseTriggersAfterTemplate": "將於事件：{2}經過{1}毫秒之後，觸發{0}事件",
+                "phraseTriggersWhenTemplate": "{0}：{1}觸發該事件",
+                "talk": "和NPC對話後"
             },
             "header": "事件：",
             "headerTriggerEvent": "觸發",
@@ -109,9 +103,8 @@
             "confirmSaveBeforeAction": "{0}前是否保存檔案？",
             "convert": {
                 "_38aUnsupported": "不支持轉換 SMBX-38A 格式的關卡。",
-                "desc1": "檔案格式將會轉換，但不會刪除原始檔。",
-                "desc2": " ",
-                "featureBlockForceSmashable": "使用了舊版本中可破碎的旋轉方塊。",
+                "desc": "檔案格式將會轉換，但不會刪除原始檔。",
+                "featureBlockForceSmashable": "旋轉方塊設置了舊版本的破碎方式。",
                 "featureCustomWorldMusic": "在大地圖中設置了自定義音樂。",
                 "featureEventAutoscroll": "在事件中設置了新版的強制卷軸。",
                 "featureEventCustomMusic": "在事件中設置了自定義音樂。",
@@ -153,11 +146,7 @@
                 "preserveLayerContents": "是否保留圖層對象？"
             },
             "desc": {
-                "att1": "當NPC移動時，",
-                "att2": "圖層也將隨之移動",
-                "att3": " ",
-                "att4": " ",
-                "att5": " "
+                "att": "當NPC移動時，圖層也將隨之移動"
             },
             "header": "圖層：",
             "itemNewLayer": "<新圖層>",
@@ -570,7 +559,7 @@
         "main": {
             "main1PlayerGame": "單人遊戲",
             "mainBattleGame": "對戰模式",
-            "mainEditor": "復古工作室",
+            "mainEditor": "初見工作室",
             "mainExit": "退出",
             "mainMultiplayerGame": "多人遊戲",
             "mainOptions": "設置",
@@ -583,6 +572,7 @@
         },
         "wordBack": "返回",
         "wordHide": "隱藏",
+	"wordLanguage": "語言",
         "wordNo": "否",
         "wordOff": "關閉",
         "wordOn": "開啓",
