--- a/languages/thextech_zh-cn.json
+++ b/languages/thextech_zh-cn.json
@@ -182,7 +182,7 @@
                 "jump": "跳跃",
                 "leap": "飞跃",
                 "swim": "游泳",
-                "target": "目标",
+                "target": "追踪",
                 "use1_0Ai": "使用1.0 AI？"
             },
             "gen": {
@@ -321,7 +321,8 @@
             "phraseCreditIndex": "地图制作团队 第{0}行：",
             "retryOnFail": "失败之后重新开始",
             "totalStars": "力量之星总数："
-        }
+        },
+	"phraseGenericIndex": "编号：{0}"
     },
     "game": {
         "connect": {
