--- a/languages/thextech_en.json
+++ b/languages/thextech_en.json
@@ -24,7 +24,7 @@
                 "changeSectionBoundsToCurrent": "Change sect {0} bounds to current?",
                 "shouldEvent": "Should Event {0}"
             },
-            "controlsForEvent": "Controls for event",
+            "controlsForEventN": "Controls for event {0}",
             "deletion": {
                 "cancel": "No: do not delete event",
                 "confirm": "Yes: delete event",
@@ -86,7 +86,7 @@
                 "propBounds": "Bounds",
                 "propMusic": "Music"
             },
-            "settingsForEvent": "Settings for event"
+            "settingsForEvent": "Settings for event {0}"
         },
         "file": {
             "actionClearLevel": "Clear Level",
@@ -219,11 +219,11 @@
             "underwater": "Underwater"
         },
         "select": {
-            "allSectPropBlankForEvent": "All Sect {0} for",
+            "allSectPropBlankForEventN": "All Sect {0} for {1}",
             "pathBlankUnlock": "Path {0} Unlock By",
-            "sectBlankPropBlankForEvent": "Sect {0} {1} for",
+            "sectBlankPropBlankForEventN": "Sect {0} {1} for {2}",
             "sectionBlankPropBlank": "Section {0} {1}",
-            "soundForEvent": "Sound for Event",
+            "soundForEventN": "Sound for Event {0}",
             "warpTransitEffect": "Warp Transition Effect",
             "worldMusic": "World Music"
         },
@@ -231,7 +231,7 @@
             "boot": "Boot",
             "char": "Char",
             "magicHand": "Magic Hand",
-            "pet": "Pet",
+            "pet": "Mount",
             "power": "Power"
         },
         "toggleMagicBlock": "Magic Block",
@@ -348,6 +348,8 @@
             "phrasePlayerDisconnected": "P{0} disconnected"
         },
         "error": {
+	    "errorInvalidEnterWarp": "========= ERROR! =========\n\nCan't start the level because of an invalid entrance warp {1} was specified.\nTotal warp entries: {2}\n\nFile: {0}",
+            "errorNoStartPoint": "========= ERROR! =========\n\nCan't start the level because of no available start points placed or entrance warp specified.\n\nFile: {0}",
             "openFileFailed": "ERROR: Can't open \"{0}\": file doesn't exist or corrupted.",
             "warpNeedStarCount": "You need collect {0} {1} to enter."
         },
@@ -569,7 +571,14 @@
         "options": {
             "optionsModeFullScreen": "Fullscreen mode",
             "optionsModeWindowed": "Windowed mode",
-            "optionsViewCredits": "View credits"
+            "optionsViewCredits": "View credits",
+	    "restartEngine": "Restart engine for changes to take effect.",
+            "scale": {
+                "integer": "Integer",
+                "label": "Scale",
+                "linear": "Linear",
+                "nearest": "Nearest"
+            }
         },
         "wordBack": "Back",
         "wordHide": "Hide",
