--- a/languages/thextech_zh-cn.json
+++ b/languages/thextech_zh-cn.json
@@ -330,12 +330,12 @@
             "phraseChangeChar": "更换角色",
             "phraseDropMe": "离开游戏",
             "phraseDropPX": "移除玩家{0}的游戏",
-            "phraseForceResume": "强制恢复",
+            "phraseForceResume": "强制恢复游戏",
             "phraseHoldStart": "按住开始键",
             "phrasePressAButton": "按下一个按键",
             "phraseSetControls": "设置按键",
-            "phraseStartToForceRes": "按开始键强制恢复",
-            "phraseStartToResume": "按开始键恢复",
+            "phraseStartToForceRes": "按开始键强制恢复游戏",
+            "phraseStartToResume": "按开始键恢复游戏",
             "phraseTestControls": "测试按键",
             "phraseWaitingForInput": "等待玩家加入……",
             "reconnectTitle": "重新连接",
@@ -354,7 +354,7 @@
             "warpNeedStarCount": "至少需要{0}{2}{1}才能进入这里。"
         },
         "pause": {
-            "continue": "继续",
+            "continue": "继续游戏",
             "dropAddPlayers": "加入/离开游戏",
             "enterCode": "输入指令",
             "quit": "退出",
@@ -590,7 +590,7 @@
         "wordOn": "开启",
         "wordPlayer": "玩家",
         "wordProfile": "配置",
-        "wordResume": "恢复",
+        "wordResume": "恢复游戏",
         "wordShow": "显示",
         "wordWaiting": "等待",
         "wordYes": "是"
