--- a/languages/thextech_en.json
+++ b/languages/thextech_en.json
@@ -551,8 +551,8 @@
             "gameEraseSlot": "Select the slot to erase",
             "gameNoBattleLevels": "<Empty Battle Level List>",
             "gameNoEpisodesToPlay": "<Empty Episode List>",
-            "gameSlotContinue": "SLOT {0} ... {1}%",
-            "gameSlotNew": "SLOT {0} ... NEW GAME",
+            "gameSlotContinue": "File {0} ... {1}%",
+            "gameSlotNew": "File {0} ... New Adventure",
             "gameSourceSlot": "Select the source slot",
             "gameTargetSlot": "Now select the target",
             "phraseScore": "Score: {0}",
