--- a/languages/thextech_en.json
+++ b/languages/thextech_en.json
@@ -351,7 +351,7 @@
 	    "errorInvalidEnterWarp": "========= ERROR! =========\n\nCan't start the level because of an invalid entrance warp {1} was specified.\nTotal warp entries: {2}\n\nFile: {0}",
             "errorNoStartPoint": "========= ERROR! =========\n\nCan't start the level because of no available start points placed or entrance warp specified.\n\nFile: {0}",
             "openFileFailed": "ERROR: Can't open \"{0}\": file doesn't exist or corrupted.",
-            "warpNeedStarCount": "You need collect {0} {1} to enter."
+            "warpNeedStarCount": "{0} {1} required to enter here."
         },
         "pause": {
             "continue": "Continue",
@@ -548,12 +548,12 @@
             "gameBattleRandom": "Random Level",
             "gameCopySave": "Copy save",
             "gameEraseSave": "Erase save",
-            "gameEraseSlot": "Select the slot to erase",
+            "gameEraseSlot": "Select the file to erase",
             "gameNoBattleLevels": "<Empty Battle Level List>",
             "gameNoEpisodesToPlay": "<Empty Episode List>",
             "gameSlotContinue": "File {0} ... {1}%",
             "gameSlotNew": "File {0} ... New Adventure",
-            "gameSourceSlot": "Select the source slot",
+            "gameSourceSlot": "Select the source file",
             "gameTargetSlot": "Now select the target",
             "phraseScore": "Score: {0}",
             "phraseTime": "Time: {0}"
