--- a/worlds/World Example/i18n/translation_en.json
+++ b/worlds/World Example/i18n/translation_en.json
@@ -1,5 +1,5 @@
 {
-    " episode_title": "Example Episode",
+    " episode_title": "Example Scenario",
     " episode_world": "Example.wldx",
     "Stage 1.lvlx": {
 	"events": [
