--- a/worlds/World Example/i18n/translation_metadata.json
+++ b/worlds/World Example/i18n/translation_metadata.json
@@ -1,6 +1,6 @@
 {
     "use-tr-id": true,
-    " episode_title": "Example Episode",
+    " episode_title": "Example Scenario",
     " episode_world": "Example.wldx",
     "Stage 1.lvlx": {
         "dialogues": [
