--- a/worlds/World Example/i18n/translation_zh-cn.json
+++ b/worlds/World Example/i18n/translation_zh-cn.json
@@ -1,5 +1,5 @@
 {
-    " episode_title": "最初的意境 示范地图",
+    " episode_title": "最初的意境 范本",
     " episode_world": "Example.wldx",
     "Stage 1.lvlx": {
 	"events": [
