--- a/worlds/World Example/i18n/translation_zh-tw.json
+++ b/worlds/World Example/i18n/translation_zh-tw.json
@@ -1,5 +1,5 @@
 {
-    " episode_title": "最初的意境 示範地圖",
+    " episode_title": "最初的意境 範本",
     " episode_world": "Example.wldx",
     "Stage 1.lvlx": {
 	"events": [
